Minor template change

--- a/5.DynamicSites/NumericSeries/NumericSeries/Views/Series/Index.cshtml
+++ b/5.DynamicSites/NumericSeries/NumericSeries/Views/Series/Index.cshtml
@@ -4,5 +4,5 @@
 }
 <h1>@Model.Series number series</h1>
 <p>
-    The @Model.N number in the @Model.Series number series is <strong>@Model.Result</strong>.
+    The number at the position @Model.N in the @Model.Series number series is <strong>@Model.Result</strong>.
 </p>
